# PyQt6-Tip-Calulator

./: README.md  pyproject.toml
pyqt6_tip_calculator/: controller.py  tip.py
tests/: test_pyqt6_tip_calculator.py
