[tool.poetry]
name = "pyqt6-tip-calculator"
version = "0.1.0"
description = ""
authors = ["CrayzQman <hughq243@hsd.k12.or.us.com>"]

[tool.poetry.dependencies]
python = "^3.9"
PyQt6 = "^6.4.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
